--- a/Hangman/Hangman/Base.lproj/Main.storyboard
+++ b/Hangman/Hangman/Base.lproj/Main.storyboard
@@ -1,14 +1,143 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Word Picker View Controller-->
+        <scene sceneID="7eX-6R-zcB">
+            <objects>
+                <viewController storyboardIdentifier="wordPicker" useStoryboardIdentifierAsRestorationIdentifier="YES" id="1Rf-fW-rfq" customClass="WordPickerViewController" customModule="Hangman" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zvF-8t-AXg"/>
+                        <viewControllerLayoutGuide type="bottom" id="4R4-AJ-8pH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JZv-pd-AsF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XpN-ME-EFN">
+                                <rect key="frame" x="28" y="20" width="320" height="639"/>
+                                <subviews>
+                                    <pickerView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bdO-Mf-Ey7">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="609"/>
+                                    </pickerView>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6bU-7c-QFA">
+                                        <rect key="frame" x="141.5" y="609" width="37" height="30"/>
+                                        <state key="normal" title="Done"/>
+                                        <connections>
+                                            <action selector="doneClicked:" destination="1Rf-fW-rfq" eventType="touchUpInside" id="mEX-Ff-1a4"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="XpN-ME-EFN" firstAttribute="leading" secondItem="JZv-pd-AsF" secondAttribute="leadingMargin" constant="12" id="7Bf-ER-Dkd"/>
+                            <constraint firstItem="4R4-AJ-8pH" firstAttribute="top" secondItem="XpN-ME-EFN" secondAttribute="bottom" constant="8" symbolic="YES" id="EZl-Bx-H0K"/>
+                            <constraint firstItem="bdO-Mf-Ey7" firstAttribute="top" secondItem="zvF-8t-AXg" secondAttribute="bottom" id="L8P-C9-1f3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="XpN-ME-EFN" secondAttribute="trailing" constant="11" id="X3s-7o-ISY"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="picker" destination="bdO-Mf-Ey7" id="wRb-Yb-ZuB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HGT-GU-jNm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-879.20000000000005" y="-856.82158920539734"/>
+        </scene>
+        <!--Game View Controller-->
+        <scene sceneID="UZ5-2g-EDb">
+            <objects>
+                <viewController id="3vp-U5-UDV" customClass="GameViewController" customModule="Hangman" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="g68-rN-ewl"/>
+                        <viewControllerLayoutGuide type="bottom" id="DoY-jF-yvd"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fIR-JX-3SJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="JCT-UP-aMp">
+                                <rect key="frame" x="21" y="20" width="338" height="642"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="MbJ-dz-ZEB">
+                                        <rect key="frame" x="0.0" y="0.0" width="338" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5EO-7b-yrY">
+                                                <rect key="frame" x="0.0" y="0.0" width="166.5" height="30"/>
+                                                <state key="normal" title="Quit"/>
+                                                <connections>
+                                                    <action selector="ButtonClicked:" destination="3vp-U5-UDV" eventType="touchUpInside" id="VNm-9V-QlJ"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Krp-Mb-eae">
+                                                <rect key="frame" x="171.5" y="0.0" width="166.5" height="30"/>
+                                                <state key="normal" title="restart"/>
+                                                <connections>
+                                                    <action selector="restartClicked:" destination="3vp-U5-UDV" eventType="touchUpInside" id="GGe-10-n8U"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <view contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="kK5-b9-rCR" customClass="PlayerPanelView" customModule="Hangman" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="31" width="338" height="236.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="gCg-iy-Op2" customClass="PlayerPanelView" customModule="Hangman" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="268.5" width="338" height="352"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Okm-Nl-bx4">
+                                        <rect key="frame" x="0.0" y="621.5" width="338" height="20.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6L-Pt-OMX">
+                                                <rect key="frame" x="0.0" y="0.0" width="166.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQs-n7-HoE">
+                                                <rect key="frame" x="171.5" y="0.0" width="166.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="JCT-UP-aMp" firstAttribute="top" secondItem="g68-rN-ewl" secondAttribute="bottom" id="B5j-Rb-hN8"/>
+                            <constraint firstItem="JCT-UP-aMp" firstAttribute="leading" secondItem="fIR-JX-3SJ" secondAttribute="leadingMargin" constant="5" id="Qa0-C1-BfS"/>
+                            <constraint firstItem="DoY-jF-yvd" firstAttribute="top" secondItem="JCT-UP-aMp" secondAttribute="bottom" constant="5" id="XvL-AF-hkv"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="JCT-UP-aMp" secondAttribute="trailing" id="dkg-xT-0Oj"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="aiPanelView" destination="gCg-iy-Op2" id="XJh-Lq-kd7"/>
+                        <outlet property="gameStateView" destination="U6L-Pt-OMX" id="XU8-xc-fjO"/>
+                        <outlet property="humanPanelView" destination="kK5-b9-rCR" id="Nn3-OO-Bko"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nrF-wj-rC1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1223.2" y="-142.57871064467767"/>
+        </scene>
+        <!--Menu View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MenuViewController" customModule="Hangman" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +145,40 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="zfu-6v-FnA">
+                                <rect key="frame" x="21" y="28" width="333" height="631"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1He-1N-l7d">
+                                        <rect key="frame" x="0.0" y="0.0" width="333" height="313"/>
+                                        <state key="normal" title="Start game"/>
+                                        <connections>
+                                            <action selector="startGameClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hi0-zf-qNR"/>
+                                            <segue destination="3vp-U5-UDV" kind="presentation" id="QJq-vb-Fiz"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hYQ-Yh-mng">
+                                        <rect key="frame" x="0.0" y="318" width="333" height="313"/>
+                                        <state key="normal" title="Reset model"/>
+                                        <connections>
+                                            <action selector="resetModelClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8gW-FT-pht"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="zfu-6v-FnA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="5" id="Azs-lL-hRD"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zfu-6v-FnA" secondAttribute="bottom" constant="8" symbolic="YES" id="Mh4-nF-mkd"/>
+                            <constraint firstItem="zfu-6v-FnA" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="X3F-hs-ugu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="zfu-6v-FnA" secondAttribute="trailing" constant="5" id="fgY-dB-JnI"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-2111" y="-141"/>
         </scene>
     </scenes>
 </document>
